fix(frontend): added margin to logbook and kanban overlapping elements when in fullscreen

--- a/frontend_app_kanban/src/css/index.styl
+++ b/frontend_app_kanban/src/css/index.styl
@@ -253,3 +253,11 @@ cardWidth = 280px
           height "calc(100% - %s)" % standardSpacing
   .kanban__contentpage__header__isEditing
     padding-bottom 60px
+
+.fullscreen
+  // INFO - ML - 2024-04-26 - 40px is the size of the fullscreen button
+  & .kanban__contentpage__wrapper
+    &__options
+      margin-inline-end "calc(40px + %s)" % standardSpacing
+    &__board
+      margin-inline-end "calc(40px + %s)" % standardSpacing
